--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body{
 	text
 }
 
-h1, nav a{
+h1, h5, nav a{
 	font-family: 'Poppins', sans-serif;
 	font-weight: 600;
 }
@@ -61,4 +61,20 @@ background-color: rgba(90, 156, 117, 0.8) !important;
 }
 iframe{
 	width: 100%;
+}
+
+.accordion-button:not(.collapsed){
+	background-color: rgba(90, 156, 117, 1.0) !important;
+	color: white;
+}
+
+.accordion-button{
+	background-color: rgba(90, 156, 117, 0.5) !important;
+}
+.accordion-body img{
+	width: 30%;
+	text-align: center;
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
